--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "date-fns": "^2.28.0",
     "element-plus": "^2.2.2",
     "vue": "^3.2.33",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
